# pgip-tools

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/pgip/: logging.py  plotting.py  utils.py
src/pgip/tools/: slim.py  tsstat.py
tests/: conftest.py
