[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pgip/_version.py"

[project]
name = "pgip"
description = "Population genomics in practice - tool package"
readme = "README.md"
# url = "https://nbissweden.github.io/pgip"
keywords = ["bioinformatics"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    'importlib-metadata; python_version>="3.7"',
    'click>="8.0"',
    'bokeh>="3.0"',
    'pandas',
    'pyslim',
    'slim>="4.0"',
    'tskit>="0.5.0"',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pgip.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pgip-slim = "pgip.tools.slim:cli"
pgip-tsstat = "pgip.tools.tsstat:cli"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --doctest-modules"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = true

[gh-actions]
python =
    3.9: py39

[testenv:test]
changedir = tests
deps =
    pytest
    pytest-coverage
    pytest-shutil
    pytest-git
    pytest-runner
    pip>=22.1.0
    wheel
commands =
	 pytest --basetemp="{envtmpdir}" {posargs}
"""
